--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "sequelize": "^4.38.0",
+    "sqlite3": "^4.0.2"
   }
 }
