--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "rc-menu": "^7.4.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
