--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.0.2",
+    "jwt-decode": "^2.2.0",
     "rc-menu": "^7.4.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
